<resources>
    <string name="app_name">mobil</string>
    <string name="name">Name</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_user_index">UserIndexActivity</string>
    <string name="findneareststore">FindNearestStore</string>
    <string name="okmanyString">Okmány Iroda Ügyintézés</string>
    <string name="bejelentkezesButton">Bejelentkezés</string>
    <string name="regisztracioButton">Regisztráció</string>
    <string name="megsemButton">Mégsem</string>
    <string name="felhasznalonevPlaceHolder">Felhasználónév</string>
    <string name="emailCimPlaceHolder">Email cím</string>
    <string name="jelszoPlaceHolder">Jelszó</string>
    <string name="jelszoUjraPlaceHolder">Jelszó újra</string>
    <string name="kijelentkezesButton">Kijelentkezés</string>
    <string name="törlésButton">Törlés</string>
    <string name="hozzaadButton">Hozzáadás</string>
    <string name="modositButton">Modosít</string>
    <string name="nevPlaceHolder">Név</string>
    <string name="valami">valami</string>
    <string name="back">back</string>
</resources>