<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    tools:context=".UserIndexActivity">

    <TextView
        android:id="@+id/mainActivityText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/okmanyString"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="#2C2C2C"
        android:gravity="center"
        android:padding="24dp"
        android:background="@drawable/header_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kijelentkezesButton"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:backgroundTint="#FF5252"
        android:elevation="4dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="logout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoryRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:contentDescription="@string/valami"
        android:padding="12dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2" />




</androidx.constraintlayout.widget.ConstraintLayout>
